--- a/index.html
+++ b/index.html
@@ -1,54 +1,73 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CV Aditya Putra Manunggal</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>CV Aditya Putra</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: auto;
+      padding: 20px;
+      background-color: #f8f9fa;
+    }
+    h1, h2 {
+      color: #333;
+    }
+    img {
+      width: 150px;
+      border-radius: 10px;
+    }
+    .section {
+      margin-bottom: 20px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    .contact i {
+      margin-right: 8px;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <div class="left">
-      <img src="Adit.jpg" alt="Foto Adit">
-      <div class="section">
-        <h3>Kontak</h3>
-        <p>📞 0815–5466–8378</p>
-        <p>📧 newaditya6@gmail.com</p>
-        <p>📍 Dsn.Talok Ds.Mragel RT.04 RW.01 Kec.Sukorame, Kab.Lamongan, Jawa Timur</p>
-      </div>
-      <div class="section">
-        <h3>Pendidikan</h3>
-        <ul>
-          <li>(2017–2020) SMP Negeri Sukorame</li>
-          <li>(2020–2023) SMA Negeri 1 Bluluk – Jurusan IPA</li>
-          <li>(2023–2026) Universitas Brawijaya – Teknologi Informasi</li>
-        </ul>
-      </div>
-      <div class="section">
-        <h3>Kemampuan</h3>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>Javascript</li>
-          <li>Laravel</li>
-        </ul>
-      </div>
-    </div>
 
-    <div class="right">
-      <h1>ADITYA PUTRA MANUNGGAL</h1>
-      <h2>Mahasiswa Teknologi Informasi</h2>
-      
-      <div class="section">
-        <h3>Profil</h3>
-        <p>Memiliki ketertarikan dan keahlian dalam bidang Internet of Things (IoT). Juga pernah mengikuti program Vokasioner Innovator Academy (VIA) 2024 yang mendorong pengembangan inovasi digital. Saya percaya bahwa belajar adalah perjalanan tanpa akhir, dan setiap proyek adalah kesempatan untuk terus berkembang.</p>
-      </div>
-
-      <div class="section">
-        <h3>Pengalaman Kerja</h3>
-        <p>Tempat Makan Sukakatsu (2023 Juni–November)</p>
-      </div>
-    </div>
+  <div style="text-align: center;">
+    <img src="Adit.jpg" alt="Foto Adit" />
+    <h1>ADITYA PUTRA MANUNGGAL</h1>
+    <h2>Mahasiswa Teknologi Informasi</h2>
   </div>
+
+  <div class="section contact">
+    <h3>Kontak</h3>
+    <p>📞 0815–5466–8378</p>
+    <p>📧 newaditya6@gmail.com</p>
+    <p>📍 Dsn. Talok Ds. Mragel RT.04 RW.01, Kec. Sukorame, Kab. Lamongan, Jawa Timur</p>
+  </div>
+
+  <div class="section">
+    <h3>Pendidikan</h3>
+    <ul>
+      <li>(2017–2020) SMP Negeri Sukorame</li>
+      <li>(2020–2023) SMA Negeri 1 Bluluk – Jurusan IPA</li>
+      <li>(2023–2026) Universitas Brawijaya – Teknologi Informasi</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h3>Kemampuan</h3>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>Laravel</li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h3>Profil</h3>
+    <p>Saya adalah mahasiswa aktif jurusan Teknologi Informasi yang antusias dalam pengembangan web dan teknologi digital.</p>
+  </div>
+
 </body>
 </html>
